# ghostdiff

./: .gitignore  Cargo.toml  DEMO.md  README.md
.github/workflows/: ci.yml
ghostdiff/: Cargo.toml
ghostdiff/examples/: async_tracking.rs  tracked_functions.rs
ghostdiff/src/: lib.rs
ghostdiff_cli/: Cargo.toml
ghostdiff_cli/src/: main.rs
ghostdiff_cli/src/commands/: demo.rs  diff.rs  inspect.rs  mod.rs  record.rs
ghostdiff_core/: Cargo.toml  output.json  recording.json
ghostdiff_core/src/: ai_diff.rs  ai_integration.rs  diff.rs  lib.rs  recorder.rs  runtime.rs
ghostdiff_core/src/providers/: gemini.rs  mod.rs  openai.rs
ghostdiff_macros/: Cargo.toml
ghostdiff_macros/src/: lib.rs
ghostdiff_ui/: Cargo.toml
ghostdiff_ui/src/: lib.rs
