[package]
name = "ghostdiff_core"
description = "Core library for time-travel debugging and AI execution diffing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0"